@@ -170,7 +170,7 @@ UTILS_OBJS = \
 	$(OU)\StrSlice.obj $(OU)\TxtParser.obj $(OU)\SerializeTxt.obj \
 	$(OU)\SquareTreeParser.obj $(OU)\SettingsUtil.obj $(OU)\SplitterWnd.obj \
 	$(OU)\WebpReader.obj $(OU)\FzImgReader.obj \
-	$(OU)\ZipUtil.obj $(OU)\RarUtil.obj $(OU)\LzmaSimpleArchive.obj \
+	$(OU)\ZipUtil.obj $(OU)\RarUtil.obj $(OU)\LzmaSimpleArchive.obj $(OU)\7zUtil.obj \
 	$(OU)\LabelWithCloseWnd.obj $(OU)\WinCursors.obj $(OU)\FrameRateWnd.obj
 
 MUI_OBJS = \
@@ -253,6 +253,7 @@ BUILD_FB2_PREVIEW = 1
 BUILD_MOBI_PREVIEW = 1
 BUILD_CBZ_PREVIEW = 1
 BUILD_CBR_PREVIEW = 1
+BUILD_CB7_PREVIEW = 1
 BUILD_TGA_PREVIEW = 1
 !endif
 
@@ -291,13 +292,16 @@ PDFPREVIEW_CFLAGS = $(PDFPREVIEW_CFLAGS) /D "BUILD_MOBI_PREVIEW"
 !endif
 !endif
 
-!if "$(BUILD_CBZ_PREVIEW)$(BUILD_CBR_PREVIEW)$(BUILD_TGA_PREVIEW)"!=""
+!if "$(BUILD_CBZ_PREVIEW)$(BUILD_CBR_PREVIEW)$(BUILD_CB7_PREVIEW)$(BUILD_TGA_PREVIEW)"!=""
 PDFPREVIEW_OBJS = $(PDFPREVIEW_OBJS) $(OS)\ImagesEngine.obj $(OS)\PdfCreator.obj
 !if "$(BUILD_CBZ_PREVIEW)"!=""
 PDFPREVIEW_CFLAGS = $(PDFPREVIEW_CFLAGS) /D "BUILD_CBZ_PREVIEW"
 !endif
 !if "$(BUILD_CBR_PREVIEW)"!=""
 PDFPREVIEW_CFLAGS = $(PDFPREVIEW_CFLAGS) /D "BUILD_CBR_PREVIEW"
+!endif
+!if "$(BUILD_CB7_PREVIEW)"!=""
+PDFPREVIEW_CFLAGS = $(PDFPREVIEW_CFLAGS) /D "BUILD_CB7_PREVIEW"
 !endif
 !if "$(BUILD_TGA_PREVIEW)"!=""
 PDFPREVIEW_CFLAGS = $(PDFPREVIEW_CFLAGS) /D "BUILD_TGA_PREVIEW"
